feat: Add quick search and search page (#134)
